# pandoc-dsl

./: .gitignore  README.md  cabal.project  default.nix  pandoc-dsl.cabal  pandoc-dsl.nix  shell.nix
ci/: ci.nix  jobsets.json  jobsets.nix
nix/: pandoc.nix
src/: Text.hs
test/: Tests.hs
